# edu-backend

./: Cargo.toml
migrations/: 20260104122133_create_user_role_enum.down.sql  20260104122133_create_user_role_enum.up.sql  20260104122139_create_users_table.up.sql  20260105021128_create_notes_table.up.sql  20260131132136_create_quiz_tables.up.sql  20260202003000_create_notifications_table.up.sql
src/: db.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: auth.rs  mod.rs  notes.rs  notifications.rs
src/api/quiz/: mod.rs
src/dto/: mod.rs  notes.rs  notification.rs  quiz.rs  user.rs
src/entities/: mod.rs  notes.rs  notification.rs  quiz.rs  user.rs
src/middlewares/: auth.rs
src/services/: mod.rs  notes.rs  notification.rs  quiz.rs  s3.rs  user.rs
src/utils/: crypto.rs  jwt.rs
